# barbar

./: .config.h.swp  .gitignore  .swp  LICENSE  Makefile  Readme.md  barbar.1  barbar.c  bartime.c  ccqwatch.c  config.c  config.h  cpom.c  dailies.c  main.c  meson.build  music.c  pomodoro.c  readme  time.c  util.c  util.h
modules/: bartime.c  ccq_dues.c  config_bartime.h  config_dailies.h  dailies.c  get_ip.c  horologion.c  pomodoro.c
